<resources>
    <string name="app_name">RongnanNews</string>
    <string name="title_activity_login">LoginActivity</string>
    <string name="hello_world">Hello world!</string>
    <string name="action_settings">Settings</string>
    <string name="login_progress_signing_in">用户名</string>
    <string name="prompt_email">Email</string>
    <string name="prompt_password">密码</string>
    <string name="action_sign_in_short">我也不知道这在什么地方</string>
    <string name="action_sign_in_register">登陆</string>
    <string name="login_label_register">注册</string>
    <string name="login_label_signin">登陆</string>
    <string name="login_label_password">密码</string>
    <string name="login_label_username">用户名</string>
    <string name="login_username_hint">字符串</string>
    <string name="title_activity_news_list">NewsListActivity</string>
    <string name="newslist">今日头条</string>
    <string name="title_activity_news">news</string>

</resources>
