<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:background="#f7f7f7"
    android:orientation="vertical" >

    <!-- Login progress -->

    <LinearLayout
        android:id="@+id/register_login_status"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:gravity="center_horizontal"
        android:orientation="vertical"
        android:visibility="gone" >

        <ProgressBar
            style="?android:attr/progressBarStyleLarge"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="8dp" />

        <TextView
            android:id="@+id/register_login_status_message"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="16dp"
            android:fontFamily="sans-serif-light"
            android:text="@string/login_progress_signing_in"
            android:textAppearance="?android:attr/textAppearanceMedium" />
    </LinearLayout>


    <!-- Login form -->
    <ScrollView
        android:id="@+id/register_login_form"
        android:layout_width="match_parent"
        android:layout_height="match_parent" >
        <LinearLayout
            style="@style/LoginFormContainer"
            android:orientation="vertical"
            android:weightSum="1">


            <RelativeLayout
                android:id="@+id/login_div"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:layout_margin="15dip"
                android:background="@drawable/background_login_div_bg"
                android:padding="15dip"
                android:layout_weight="1.15">

                <Button
                    android:id="@+id/register_button"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignLeft="@+id/register_password_edit"
                    android:layout_below="@+id/register_password_edit"
                    android:layout_marginTop="10dp"
                    android:background="@drawable/blue_button"
                    android:text="@string/login_label_register" />

                <Button
                    android:id="@+id/register_signin_button"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignRight="@+id/register_password_edit"
                    android:layout_below="@+id/register_password_edit"
                    android:layout_marginTop="10dp"
                    android:background="@drawable/blue_button"
                    android:text="@string/login_label_signin" />

                <EditText
                    android:id="@+id/register_password_edit"
                    android:layout_width="fill_parent"
                    android:layout_height="wrap_content"
                    android:layout_alignLeft="@+id/login_password_input"
                    android:layout_below="@+id/login_password_input"
                    android:layout_marginTop="10dp"
                    android:inputType="textPassword"
                    android:lines="1"
                    android:singleLine="true" />

                <TextView
                    android:id="@+id/login_password_input"
                    style="@style/normalText"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignLeft="@+id/register_username_edit"
                    android:layout_below="@+id/register_username_edit"
                    android:layout_marginTop="10dp"
                    android:text="@string/login_label_password" />

                <TextView
                    android:id="@+id/register_login_user_input"
                    style="@style/normalText"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignLeft="@+id/register_username_edit"

                    android:layout_marginTop="10dp"
                    android:text="@string/login_label_username" />



                <EditText
                    android:id="@+id/register_username_edit"
                    android:layout_width="fill_parent"
                    android:layout_height="wrap_content"
                    android:layout_below="@+id/register_login_user_input"
                    android:layout_centerHorizontal="true"
                    android:layout_marginTop="10dp"
                    android:ems="10"
                    android:hint="@string/login_username_hint"
                    android:inputType="text"
                    android:singleLine="true"/>

            </RelativeLayout>
        </LinearLayout>
    </ScrollView>



</FrameLayout>